--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
         "gulp-cli": "^2.3.0",
         "md5": "^2.3.0",
         "morgan": "^1.10.0",
-        "mysql": "^2.18.1"
+        "mysql": "^2.18.1",
+        "querystring": "^0.2.0"
     },
     "devDependencies": {},
     "scripts": {
