--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
         "md5": "^2.3.0",
         "morgan": "^1.10.0",
         "mysql": "^2.18.1",
-        "querystring": "^0.2.0"
+        "querystring": "^0.2.0",
+        "vue": "^2.6.12"
     },
     "devDependencies": {},
     "scripts": {
